--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"dependencies": {
 		"bcrypt": "^5.1.0",
 		"dotenv": "^16.0.3",
+		"env": "^0.0.2",
 		"express": "^4.18.2",
 		"express-async-errors": "^3.1.1",
 		"express-validator": "^6.14.3",
